--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
 
-    <div class=popupContainer  *ngIf="token">
+    <div class=popupContainer *ngIf="token">
       <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add activity</button>
 
       <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Create new Activity'" [popupWidth]="5" (onClose)="formPopupOnClose()">
@@ -21,13 +21,20 @@
         <button type="button" class="btn btn-info col-xs-4 col-sm-3 col-md-2" (click)="joinInButtonCB(i)">S'inscrire</button>
 
         <div *ngIf="activity.show" class="col-xs-12">
-          <div *ngIf="activity.mimetype">
+          <div *ngIf="activity.mimetype" class="row">
             <div>
               <img [ngClass]="{'float-xs-right': e, 'float-xs-left': !e}" class="hidden-xs-down" src={{activity.media}}>
             </div>
           </div>
           <div class="panel-body activityText">{{activity.text}}</div>
           <div class="locationDiv">Location : {{activity.location}}</div>
+
+          <div *ngIf="token">
+            <hr/>
+            <div>
+              <span *ngFor="let mail of activity.participants">{{mail}}, </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
