--- a/src/app/activity-form/activity-form.component.html
+++ b/src/app/activity-form/activity-form.component.html
@@ -1,19 +1,19 @@
-<form (ngSubmit)="submitActivity()" class="row card" id='newActivity'>
+<form (ngSubmit)="activity._id ? editActivity() : submitActivity()" class="row card" id='activity'>
   <div class="form-group">
-    <input type="text" class="form-control" id="title" [(ngModel)]="newActivity.title" name="title">
+    <input type="text" class="form-control" id="title" [(ngModel)]="activity.title" name="title">
   </div>
 
   <div class="form-group">
-    <textarea class="form-control" id="text" rows="3" [(ngModel)]="newActivity.text" name="text"></textarea>
+    <textarea class="form-control" id="text" rows="3" [(ngModel)]="activity.text" name="text"></textarea>
   </div>
 
   <div class="form-group">
-    <input type="text" class="form-control" id="location" [(ngModel)]="newActivity.location" name="location">
+    <input type="text" class="form-control" id="location" [(ngModel)]="activity.location" name="location">
   </div>
 
   <div class="row">
     <div class="form-group col-xs-4">
-      <select class="custom-select" id="mimetype" [(ngModel)]="newActivity.mimetype" name="mimetype">
+      <select class="custom-select" id="mimetype" [(ngModel)]="activity.mimetype" name="mimetype">
         <option selected>Open this select menu</option>
         <option value="">Select media</option>
         <option value="image">image</option>
@@ -21,21 +21,24 @@
       </select>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newActivity.mimetype === 'image' && !newActivity.media">
+    <div class="form-group col-xs-5" *ngIf="activity.mimetype === 'image' && !activity.media">
       <label class="custom-file">
         <input type="file" id="file" class="custom-file-input" (change)="fileChange(input)" #input>
         <span class="custom-file-control">Click here to choose image</span>
       </label>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newActivity.media && newActivity.mimetype === 'image'">
-      <img [attr.src]='newActivity.media' (click)="removeFile(i)" class="img-thumbnail rounded mx-auto d-block" alt=""/>
+    <div class="form-group col-xs-5" *ngIf="activity.media && activity.mimetype === 'image'">
+      <img [attr.src]='activity.media' (click)="removeFile(i)" class="img-thumbnail rounded mx-auto d-block" alt=""/>
     </div>
 
-    <div class="form-group col-xs-5" *ngIf="newActivity.mimetype === 'youtube'">
-      <input type="text" class="form-control" id="youtube" [(ngModel)]="newActivity.media" name="media">
+    <div class="form-group col-xs-5" *ngIf="activity.mimetype === 'youtube'">
+      <input type="text" class="form-control" id="youtube" [(ngModel)]="activity.media" name="media">
     </div>
 
-    <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">Submit</button>
+    <div class="form-group col-xs-12">
+      <input (click)="deleteActivity()" *ngIf="activity._id" class="btn btn-danger col-xs-2 mr-1 float-xs-left" value="Delete">
+      <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">{{activity._id ? 'Edit' : 'Submit'}}</button>
+    </div>
   </div>
 </form>
