--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,21 @@
 <header>
   <div *ngIf="logo && banner" class="logos container pl-0 pr-0">
-    <div class=" hidden-sm-down col-md-4 pl-0 pr-0">
+    <div class="hidden-sm-down col-md-4 pl-0 pr-0 logo">
       <img class="float-xs-let" [attr.src]='logo.value'/>
     </div>
-    <div class="col-sm-12 col-md-8 pl-0 pr-0">
+    <div class="col-sm-12 col-md-8 pl-0 pr-0 logo">
       <img class="float-xs-right" [attr.src]='banner.value'/>
     </div>
   </div>
-  <nav class="navbar navbar-light bg-faded">
-    <div class="nav navbar-nav container">
-      <div  *ngFor="let page of pages; let i = index; let e = even">
-        <a class="nav-item nav-link float-xs-right"
-        [ngClass]="{'float-xs-left': page.position===0, 'float-xs-right': page.position!==0, 'ml-1': page.position!==0}"
-        routerLink="{{ page.position!==0 ? pageTypes[page.type]+'/'+page._id : '' }}">{{ page.name }}</a>
+  <div class="navcontainer">
+    <nav class="navbar navbar-light bg-faded" [ngClass]="{'stick': shouldStick}">
+      <div class="nav navbar-nav container">
+        <div  *ngFor="let page of pages; let i = index; let e = even">
+          <a class="nav-item nav-link float-xs-right"
+          [ngClass]="{'float-xs-left': page.position===0, 'float-xs-right': page.position!==0, 'ml-1': page.position!==0}"
+          routerLink="{{ page.position!==0 ? pageTypes[page.type]+'/'+page._id : '' }}">{{ page.name }}</a>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
