added mentions at the bottom of footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,5 +24,9 @@
         <li *ngFor="let contact of contacts">{{contact}}</li>
       </ul>
     </div>
+    <hr/>
+    <div class="col-sm-12 mentions">
+      Tous les contenus de ce site sont propriété du CIJM | Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | <a href="https://github.com/Saarg/blog-prefab">Sources</a>.
+    </div>
   </div>
 </footer>
