--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,7 @@
     </div>
     <hr/>
     <div class="col-sm-12 mentions">
-      Tous les contenus de ce site sont propriété du CIJM | Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | <a href="https://github.com/Saarg/blog-prefab">Sources</a>.
+      Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | Tous les contenus de ce site sont propriété du CIJM | <a href="https://github.com/Saarg/blog-prefab">Sources</a>.
     </div>
   </div>
 </footer>
