--- a/src/app/media-form/media-form.component.html
+++ b/src/app/media-form/media-form.component.html
@@ -4,7 +4,7 @@
     <div class="form-group col-xs-12">
       <label class="custom-file col-xs-12">
         <input type="file" id="file" class="custom-file-input" multiple (change)="fileChange(input)" #input>
-        <span class="custom-file-control">Click here to choose image(s)</span>
+        <span class="custom-file-control">Cliquez ici pour choisir de(s) image(s)</span>
       </label>
     </div>
   </div>
@@ -15,6 +15,6 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary col-xs-12">Submit</button>
+  <button type="submit" class="btn btn-primary col-xs-12">Envoyer</button>
 </form>
 </div>
