--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -15,7 +15,7 @@
           <ng-content></ng-content>
         </div>
         <div class=popupFooter>
-          <button type="button" class="btn btn-default" (click)="launchEvent()">Close</button>
+          <button type="button" class="btn btn-default" (click)="launchEvent()">Fermer</button>
         </div>
       </div>
 
