--- a/src/app/activity-form/activity-form.component.html
+++ b/src/app/activity-form/activity-form.component.html
@@ -14,8 +14,7 @@
   <div class="row">
     <div class="form-group col-xs-4">
       <select class="custom-select" id="mimetype" [(ngModel)]="activity.mimetype" name="mimetype">
-        <option selected>Open this select menu</option>
-        <option value="">Select media</option>
+        <option value="" selected>Choisir média</option>
         <option value="image">image</option>
         <option value="youtube">youtube</option>
       </select>
@@ -24,7 +23,7 @@
     <div class="form-group col-xs-5" *ngIf="activity.mimetype === 'image' && !activity.media">
       <label class="custom-file">
         <input type="file" id="file" class="custom-file-input" (change)="fileChange(input)" #input>
-        <span class="custom-file-control">Click here to choose image</span>
+        <span class="custom-file-control">Cliquez ici pour choisir l'image</span>
       </label>
     </div>
 
@@ -37,8 +36,8 @@
     </div>
 
     <div class="form-group col-xs-12">
-      <input (click)="deleteActivity()" *ngIf="activity._id" class="btn btn-danger col-xs-2 mr-1 float-xs-left" value="Delete">
-      <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">{{activity._id ? 'Edit' : 'Submit'}}</button>
+      <input (click)="deleteActivity()" *ngIf="activity._id" class="btn btn-danger col-xs-2 mr-1 float-xs-left" value="Supprimer">
+      <button type="submit" class="btn btn-primary col-xs-2 mr-1 float-xs-right">{{activity._id ? 'Editer' : 'Valider'}}</button>
     </div>
   </div>
 </form>
