--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -3,9 +3,9 @@
     <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
 
     <div class=popupContainer *ngIf="token">
-      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add activity</button>
+      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">Ajouter une activitée</button>
 
-      <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Create new Activity'" [popupWidth]="5" (onClose)="formPopupOnClose()">
+      <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Ajouter une activitée'" [popupWidth]="5" (onClose)="formPopupOnClose()">
         <app-activity-form [pageId]="curId" (newActivityEvent)="newActivity($event) || formPopupOnClose()" ></app-activity-form>
       </app-popup>
     </div>
