--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="row">
   <form (ngSubmit)="login()" class="card col-xs-12 col-md-6 offset-md-3" *ngIf="!token">
       <div class="form-group">
-          <label for="example-search-input" class="col-form-label">Username:</label>
+          <label for="example-search-input" class="col-form-label">Nom:</label>
           <div>
             <input class="form-control" type="text" [(ngModel)]="user.username" name="username" id="username">
           </div>
       </div>
       <div class="form-group">
-          <label for="example-search-input" class="col-form-label">Password:</label>
+          <label for="example-search-input" class="col-form-label">Mot de passe:</label>
           <div>
             <input class="form-control" type="password" [(ngModel)]="user.password" name="username" id="password">
           </div>
       </div>
       <div class="form-group">
-          <input type="submit" class="btn btn-primary col-xs-12" value="Log In"/>
+          <input type="submit" class="btn btn-primary col-xs-12" value="Connexion"/>
       </div>
   </form>
-  <button (click)="logout()" class="btn btn-danger col-xs-12 col-md-6 offset-md-3" *ngIf="token">Logout</button>
+  <button (click)="logout()" class="btn btn-danger col-xs-12 col-md-6 offset-md-3" *ngIf="token">Deconnexion</button>
 </div>
