--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
           <div class="articleFooter">
             <span *ngIf="article.created===article.updated"> Créé: {{getPrettyDate(article.created)}}</span>
             <br>
-            <span *ngIf="article.created!==article.updated"> Dernière mise a jour: {{getPrettyDate(article.updated)}}</span>
+            <span *ngIf="article.created!==article.updated"> Dernière mise à jour: {{getPrettyDate(article.updated)}}</span>
           </div>
         </div>
       </div>
