--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="card-footer">
   <div class="container">
-    <div class="col-sm-4 hidden-sm-down">
+    <div class="col-sm-4 hidden-sm-down pl-0 pr-0">
       <div class="card-block">
         <h3 class="card-header">Des infos</h3>
       </div>
@@ -8,7 +8,7 @@
         <li *ngFor="let info of infos">{{info}}</li>
       </ul>
     </div>
-    <div class="col-sm-6 col-md-4 hidden-xs-down">
+    <div class="col-sm-6 col-md-4 hidden-xs-down pl-0 pr-0">
       <div class="card-block">
         <h3 class="card-header">Partenaires</h3>
       </div>
@@ -16,7 +16,7 @@
         <li *ngFor="let partner of partners">{{partner}}</li>
       </ul>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4 pl-0 pr-0">
       <div class="card-block">
         <h3 class="card-header">Contact</h3>
       </div>
@@ -26,7 +26,7 @@
     </div>
     <hr/>
     <div class="col-sm-12 mentions">
-      Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | Tous les contenus de ce site sont propriété du CIJM | <a href="https://github.com/Saarg/blog-prefab">Sources</a>.
+      <span class="hidden-sm-down">Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | </span><span>Tous les contenus de ce site sont propriété de hec&co</span><span class="hidden-sm-down"> | <a href="https://github.com/Saarg/blog-prefab">Sources</a></span>.
     </div>
   </div>
 </footer>
