added padding at the bottom of activity

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
+html {
+  min-height: 100vh;
+}
+
 body {
   /*background-color: #FDFBF4;*/
   background-color: #EFEFFO;
+  min-height: 100vh;
 }
 
 /* You can add global styles to this file, and also import other style files */
