minor text fixes

--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -31,8 +31,8 @@
       <div class="form-group col-xs-2 pr-0" *ngIf="!curPage._id">
         <select class="custom-select" id="mimetype" [(ngModel)]="curPage.type" name="type">
           <option selected value="0">Blog type</option>
-          <option value="1">Activityé type</option>
-          <option value="2">Gallerie type</option>
+          <option value="1">Activités type</option>
+          <option value="2">Galerie type</option>
         </select>
       </div>
 
