--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,7 @@
     </div>
     <hr/>
     <div class="col-sm-12 mentions">
-      <span class="hidden-sm-down">Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | </span><span>Tous les contenus de ce site sont propriété de hec&co</span><span class="hidden-sm-down"> | <a href="https://github.com/Saarg/blog-prefab">Sources</a></span>.
+      <span class="hidden-sm-down">Site par <a href="https://github.com/Kwarthys">Cap'n Kwarthys</a> et <a href="https://github.com/Saarg">Saarg</a> | </span><span>Tous les contenus de ce site sont propriété de HEX&CO</span><span class="hidden-sm-down"> | <a href="https://github.com/Saarg/blog-prefab">Sources</a></span>.
     </div>
   </div>
 </footer>
