--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -3,7 +3,7 @@
     <h1 *ngIf="pageInfo">{{pageInfo.name}}</h1>
 
     <div class=popupContainer *ngIf="token">
-      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">Ajouter une activitée</button>
+      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">Ajouter une activité</button>
 
       <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Ajouter une activitée'" [popupWidth]="5" (onClose)="formPopupOnClose()">
         <app-activity-form [pageId]="curId" (newActivityEvent)="newActivity($event) || formPopupOnClose()" ></app-activity-form>
